<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="vandaimer.com.calculadora.MainActivity"
    android:background="@android:color/background_dark">

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/tv_resultado"
        android:layout_marginTop="50dp"
        android:layout_height="75dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="30sp"
        android:text="@string/default_value"
        android:textAlignment="viewEnd" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gl_bts"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/bt_sete"
            android:text="@string/sete"
            android:layout_height="60dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_width="80dp" />

        <Button
            android:text="@string/oito"
            android:id="@+id/bt_oito"
            android:layout_height="60dp"
            android:layout_width="80dp" />

        <Button
            android:text="@string/nove"
            android:id="@+id/bt_nove"
            android:layout_height="60dp"
            android:layout_width="80dp" />

        <Button
            android:text="@string/multiplicacao"
            android:id="@+id/bt_multiplicacao"
            android:layout_height="60dp"
            android:layout_width="80dp" />

        <Button
            android:text="@string/zero"
            android:id="@+id/bt_zero"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_height="60dp"
            android:layout_width="80dp" />

        <Button
            android:text="@string/cinco"
            android:id="@+id/bt_cinco"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_height="60dp"
            android:layout_width="80dp" />

        <Button
            android:text="@string/seis"
            android:id="@+id/bt_seis"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_height="60dp"
            android:layout_width="80dp" />

        <Button
            android:text="@string/subtracao"
            android:id="@+id/bt_subtracao"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_height="60dp"
            android:layout_width="80dp" />

        <Button
            android:text="@string/dois"
            android:id="@+id/bt_dois"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_height="60dp"
            android:layout_width="80dp" />

        <Button
            android:text="@string/quatro"
            android:id="@+id/bt_quatro"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_height="60dp"
            android:layout_width="80dp" />

        <Button
            android:text="@string/tres"
            android:id="@+id/bt_tres"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_height="60dp"
            android:layout_width="80dp" />

        <Button
            android:text="@string/adicao"
            android:id="@+id/bt_adicao"
            android:layout_row="3"
            android:layout_column="3"
            android:layout_height="60dp"
            android:layout_width="80dp" />

        <Button
            android:text="@string/um"
            android:id="@+id/bt_um"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_height="60dp"
            android:layout_width="80dp" />

        <Button
            android:text="@string/igual"
            android:id="@+id/bt_igual"
            android:layout_row="4"
            android:layout_column="3"
            android:layout_height="60dp"
            android:layout_width="80dp"
            android:onClick="setResult"/>

        <Button
            android:text="@string/ponto"
            android:id="@+id/bt_ponto"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_height="60dp"
            android:layout_width="80dp" />

        <Button
            android:id="@+id/bt_limpar"
            android:text="@string/limpar"
            android:layout_height="60dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_width="80dp"
            android:onClick="reset"/>

        <Button
            android:text="@string/divisao"
            android:id="@+id/bt_divisao"
            android:layout_height="60dp"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_width="80dp" />

    </GridLayout>
</RelativeLayout>
